rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__renders_multi_section_json_with_command_totals.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
assertion_line: 696
expression: "serde_json::to_string_pretty(&report).unwrap()"
---
{
  "daily": [
    {
      "agent": "all",
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 0,
      "cacheCreationUnbucketedTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 100,
      "metadata": {
        "agents": [
          "codex"
        ]
      },
      "modelBreakdowns": [],
      "modelsUsed": [
        "gpt-5"
      ],
      "outputTokens": 20,
      "period": "2026-01-02",
      "totalCost": 0.01,
      "totalTokens": 120
    }
  ],
  "monthly": [
    {
      "agent": "all",
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 0,
      "cacheCreationUnbucketedTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 100,
      "metadata": {
        "agents": [
          "codex"
        ]
      },
      "modelBreakdowns": [],
      "modelsUsed": [
        "gpt-5"
      ],
      "outputTokens": 20,
      "period": "2026-01",
      "totalCost": 0.01,
      "totalTokens": 120
    }
  ],
  "session": [
    {
      "agent": "codex",
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 0,
      "cacheCreationUnbucketedTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 100,
      "metadata": {
        "lastActivity": "2026-01-02T00:00:00.000Z"
      },
      "modelBreakdowns": [],
      "modelsUsed": [
        "gpt-5"
      ],
      "outputTokens": 20,
      "period": "session-a",
      "totalCost": 0.01,
      "totalTokens": 120
    }
  ],
  "totals": {
    "cacheCreation1hTokens": 0,
    "cacheCreation5mTokens": 0,
    "cacheCreationTokens": 0,
    "cacheCreationUnbucketedTokens": 0,
    "cacheReadTokens": 10,
    "inputTokens": 100,
    "outputTokens": 20,
    "totalCost": 0.01,
    "totalTokens": 120
  }
}
