rust/crates/ccusage-adapter-all/src/snapshots/ccusage_adapter_all__tests__zcode_fixture_session_json.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
assertion_line: 992
expression: "report_json(&session.rows, AgentReportKind::Session)"
---
{
  "session": [
    {
      "agent": "zcode",
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 45,
      "cacheCreationUnbucketedTokens": 45,
      "cacheReadTokens": 65,
      "inputTokens": 190,
      "metadata": {
        "lastActivity": "2099-01-15T12:00:00.000Z"
      },
      "modelBreakdowns": [
        {
          "cacheCreation1hTokens": 0,
          "cacheCreation5mTokens": 0,
          "cacheCreationTokens": 30,
          "cacheCreationUnbucketedTokens": 30,
          "cacheReadTokens": 40,
          "cost": 0.0003224,
          "inputTokens": 130,
          "modelName": "GLM-5.3",
          "outputTokens": 20
        },
        {
          "cacheCreation1hTokens": 0,
          "cacheCreation5mTokens": 0,
          "cacheCreationTokens": 15,
          "cacheCreationUnbucketedTokens": 15,
          "cacheReadTokens": 25,
          "cost": 0.00015549999999999999,
          "inputTokens": 60,
          "modelName": "GLM-5.2",
          "outputTokens": 10
        }
      ],
      "modelsUsed": [
        "GLM-5.2",
        "GLM-5.3"
      ],
      "outputTokens": 30,
      "period": "session-a",
      "totalCost": 0.00047789999999999996,
      "totalTokens": 330
    },
    {
      "agent": "zcode",
      "cacheCreation1hTokens": 0,
      "cacheCreation5mTokens": 0,
      "cacheCreationTokens": 0,
      "cacheCreationUnbucketedTokens": 0,
      "cacheReadTokens": 10,
      "inputTokens": 40,
      "metadata": {
        "lastActivity": "2099-02-01T00:00:00.000Z"
      },
      "modelBreakdowns": [
        {
          "cacheCreation1hTokens": 0,
          "cacheCreation5mTokens": 0,
          "cacheCreationTokens": 0,
          "cacheCreationUnbucketedTokens": 0,
          "cacheReadTokens": 10,
          "cost": 0.0000806,
          "inputTokens": 40,
          "modelName": "GLM-5.3",
          "outputTokens": 5
        }
      ],
      "modelsUsed": [
        "GLM-5.3"
      ],
      "outputTokens": 5,
      "period": "session-b",
      "totalCost": 0.0000806,
      "totalTokens": 55
    }
  ],
  "totals": {
    "cacheCreation1hTokens": 0,
    "cacheCreation5mTokens": 0,
    "cacheCreationTokens": 45,
    "cacheCreationUnbucketedTokens": 45,
    "cacheReadTokens": 75,
    "inputTokens": 230,
    "outputTokens": 35,
    "totalCost": 0.0005585,
    "totalTokens": 385
  }
}
